--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,17 @@
     "Scope": "/",
     "start_url": "/startpage.html",
     "icons": [
+
+        {
+            "src": "imgs/72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+            },
+    {
+        "src": "imgs/96.png",
+        "sizes": "96x96",
+        "type": "image/png"
+        },
     {
     "src": "imgs/128.png",
     "sizes": "128x128",
@@ -31,12 +42,6 @@
     "src": "imgs/512.png",
     "sizes": "512x512",
     "type": "image/png"
-    },
-    {
-        "src": "images/icons/icon-72x72.png",
-        "sizes": "72x72",
-        "type": "image/png"
-        }
-    ],
+    }],
     "splash_pages": null
 }
