--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "JD",
+    "name": "京东",
     "short_name": "京东",
     "theme_color": "#e56045",
     "background_color": "#f2f2f2",
@@ -8,47 +8,47 @@
     "start_url": "/startpage.html",
     "icons": [
         {
-            "src": "imgs/72.png",
+            "src": "imgs/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "imgs/96.png",
+            "src": "imgs/icon-96x96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "imgs/128.png",
+            "src": "imgs/icon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "imgs/144.png",
+            "src": "imgs/icon-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "imgs/152.png",
+            "src": "imgs/icon-152x152.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "imgs/192.png",
+            "src": "imgs/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "imgs/384.png",
+            "src": "imgs/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "imgs/256.png",
+            "src": "imgs/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "imgs/512.png",
+            "src": "imgs/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
