--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,11 @@
             "type": "image/png"
         },
         {
+            "src": "imgs/icon-114x114.png",
+            "sizes": "114x114",
+            "type": "image/png"
+        },
+        {
             "src": "imgs/icon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
